fix alignment on next click

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -76,12 +76,6 @@ body {
   border-radius: 4px;
 }
 
-.navigation:hover {
-  fill: #d9d9d9;
-  cursor: pointer;
-}
-
-
 .CurrentDay-Area {
   stroke: #60bdf1;
 }/* You can add global styles to this file, and also import other style files */
